# rss_reader

./: Cargo.toml  output.test
src/: main.rs
src/lib/: mod.rs  rss_channel.rs  rss_item.rs
