[package]
name = "rss-reader"
version = "0.1.0"
authors = ["Mason Gil <masonegil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.3"
termion = "*"
reqwest = { version = "0.11.2", features = ["blocking"]}